--- a/config.json
+++ b/config.json
@@ -81,7 +81,7 @@
       "name": "百度资源"
       },
     "hmer": {
-      "api": "https://api.apibdzy.com/api.php/provide/vod",
+      "api": "https://json.heimuer.xyz/api.php/provide/vod",
       "name": "黑木耳资源"
     }
   }
